[metadata]
name = phase_extender
version = 0.1.4
author = Bishwa K. Giri
author_email = kirannbishwa01@gmail.com
description = A python program that uses ReadBack phased haplotypes in population of samples and returns extended haplotype blocks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/everestial/phase-Extender
project_urls =
    Bug Tracker = https://github.com/everestial/phase-Extender
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = phase_extender

python_requires = >=3.7

[options.entry_points]
console_scripts =
    phase_extender = phase_extender.__main__:main
    phase-extender = phase_extender.__main__:main
    phase-Extender = phase_extender.__main__:main

